# anoto_pdf

./: .gitignore  Cargo.toml  README.md
rs_microdots/: Cargo.toml
rs_microdots/output/: G__50__50__10__10.json  G__50__50__10__10.txt  G__50__50__20__20.json  G__50__50__20__20.txt  section_88_8.json  section_88_8.txt  section_8_8.json  section_8_8.txt
rs_microdots/src/: lib.rs  main.rs
rs_microdots/src/anoto_matrix/: dotmatrix.rs
rs_microdots/src/codec/: mod.rs
rs_microdots/src/pdf_dotpaper/: gen_pdf.rs
src/: fonts.rs  lib.rs  main.rs
src/anoto_matrix/: dotmatrix.rs  mod.rs
src/codec/: mod.rs
src/controls/: anoto_control.rs  mod.rs  page_layout_control.rs  section_control.rs
src/decode_utils/: find_pos.rs
src/make_plots/: mod.rs  plotting.rs
src/pdf_dotpaper/: gen_pdf.rs  mod.rs
