[package]
name = "anoto_pdf"
authors = ["Terry McConnell <terry@example.com>"]
version = "0.4.5"
edition = "2024"

[dependencies]
clap = "4.5.53"
ndarray = { version = "0.17.1", features = ["serde"] }
plotters = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oxidize-pdf = "1.6.4"
kornia = "0.1.9"
iced = { version = "0.13", features = ["image", "canvas", "svg"] }
iced_aw = { version = "0.12", features = ["color_picker", "number_input", "card", "spinner"] }
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
image = "0.25.9"
