[package]
name = "anoto_dots"
authors = ["Terry McConnell <terry@example.com>"]
version = "0.2.0"
edition = "2024"

[dependencies]
clap = "4.5.53"
ndarray = { version = "0.17.1", features = ["serde"] }
plotters = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oxidize-pdf = "1.6.4"
kornia = "0.1.9"
